Resolve issue with invisible borders of separators. Resolve issue with alignment of left and right trees. Resolve issue with incorrect inserting of QueueTask into QueueComponent. Code refactoring.

--- a/libreplan-webapp/src/main/webapp/planner/css/ganttzk.css
+++ b/libreplan-webapp/src/main/webapp/planner/css/ganttzk.css
@@ -782,6 +782,13 @@ tr.z-vbox-separator {
 }
 
 /* ---------- Start Limiting resources --------------- */
+.limitingresources-list {
+    margin-top: -13px;
+}
+
+.limitingresources-list .row_resourceload {
+    height: 24px;
+}
 
 .limiting-resources .z-tree-line {
     display: none;
